--- a/pragmatic/templates/base.html
+++ b/pragmatic/templates/base.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Base</title>
-</head>
+{% include 'head.html' %}
 <body>
-    <h2>dd</h2>
+
+    {% include 'header.html' %}
+
+    {% block content %}
+    {% endblock %}
+
+    {% include 'bottom.html' %}
 </body>
 </html>
